# HealthQuote.NL

./: Initial Instruction Prompts.docx  README.md  pyproject.toml
resources/: RPrompt-1.docx  RPrompt-2.docx
src/metaphor_extraction/: chain.py  config.yaml  pipeline.py  structured_output.py  validation.py
src/metaphor_extraction/prompts/: prompt_1.md  prompt_2.md
src/metaphor_extraction/prompts/.ipynb_checkpoints/: prompt_2-checkpoint.md
